[tool.poetry]
package-mode = false

[project]
name = "job-interview-brahma"
version = "0.1.0"
description = "Job Interview for Brahma AI"
authors = [
    {name = "Juan Rial",email = "jrial@safehex.be"}
]
license = {text = "GPL v2"}
requires-python = ">=3.12"
dependencies = [
]

[dependency-groups]
dev = [
    "ipdb (>=0.13.13,<0.14.0)",
    "ipython (>=9.10.0,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
